Refactor recipe model and migrations: - Alter preparation_time field to DurationField with help text. - Remove and recreate category field as ManyToManyField. - Add admin_approved and approved_by fields to Recipe model. - Create UserProfile model for user-related data. - Implement AdminApprovalMixin for handling recipe approval logic. - Update serializers and views to accommodate new fields and admin functionalities.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             ],
             "django": true,
             "autoStartBrowser": false,
-            "program": "${workspaceFolder}\\manage.py"
+            "program": "${workspaceFolder}\\manage.py",
         },
     ]
 }
