--- a/.env-example
+++ b/.env-example
@@ -9,3 +9,5 @@ CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:9000,http://127.0.0.
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:8000,http://localhost,https://localhost,
 
 SECRET_KEY_JWT='CHANGE-ME'
+REFRESH_TOKEN_LIFETIME=INT (IN MINUTES)
+ACCESS_TOKEN_LIFETIME=INT (IN MINUTES)
