--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+attrs==25.3.0
 Django==5.2
 django-cleanup==9.0.0
 django-cors-headers==4.7.0
@@ -7,8 +8,17 @@ django-environ==0.12.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-spectacular==0.28.0
 Faker==37.1.0
+inflection==0.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
 pillow==11.2.1
 PyJWT==2.9.0
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.26.0
 sqlparse==0.5.3
+typing_extensions==4.14.1
 tzdata==2025.2
+uritemplate==4.2.0
